--- a/app/src/main/res/layout/activity_new_pet.xml
+++ b/app/src/main/res/layout/activity_new_pet.xml
@@ -12,6 +12,13 @@
         android:orientation="vertical"
         android:padding="@dimen/pad_16">
 
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="@string/heading_category"
+            android:textStyle="bold" />
+
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/input_category"
             android:layout_width="match_parent"
@@ -39,7 +46,29 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/chip_bird" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/category_bunny"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/chip_bunny" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/category_fish"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/chip_fish" />
+
         </com.google.android.material.chip.ChipGroup>
+
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="@string/heading_details"
+            android:textStyle="bold" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
