--- a/app/src/main/res/layout/layout_signin.xml
+++ b/app/src/main/res/layout/layout_signin.xml
@@ -12,6 +12,7 @@
         android:layout_marginBottom="@dimen/pad_16"
         android:text="@string/activity_signin"
         android:textAlignment="center"
+        android:gravity="center_horizontal"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
 
     <com.google.android.material.textfield.TextInputLayout
